@@ -26,6 +26,7 @@ public class ABSSimSharing {
         public static final String HANDLE = "handle";
         public static final String IS_CIRCUIT_COMPLETED = "isCircuitCompleted";
         public static final String IS_IN_SOLUTION = "isInSolution";
+        public static final String IS_PAPER_ALIGNED_WITH_COLOR_KEY = "isPaperAlignedWithColorKey";
         public static final String LENS = "lens";
         public static final String MOLECULE = "molecule";
     }
